--- a/index.html
+++ b/index.html
@@ -13,4 +13,6 @@
         <div class="logo">Guess The Number</div>
         <div class="button" id="start">START</div>
     </div>
-    <script src=./app.js> </script> </body> </html> </body> </html>
+    <script src=./app.js> </script>
+ </body> 
+ </html> 
