--- a/lose.html
+++ b/lose.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h1>Oops! Game over.</h1>
-        <img src="./assests/lose.jpg" alt="congrats">
+        <img src="./assets/lose.jpg" alt="congrats">
         <div class="button" id="reset">Play Again</div>
     </div>
     <script src=./reset.js> </script> </body> </html>
