--- a/win.html
+++ b/win.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h1>Congrats! You were spot on.</h1>
-        <img src="./assests/congrats.jpg" alt="congrats">
+        <img src="./assets/congrats.jpg" alt="congrats">
         <div class="button" id="reset">Play Again</div>
     </div>
     <script src=./reset.js> </script> </body> </html>
